--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body{
 }
 
 .tarjeta{
-    margin: 1rem 2rem;
+    margin: 1rem 10rem;
     padding: 1rem 2rem;
     background-color: #f5f5f5;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -62,7 +62,7 @@ html, body{
 }
 
 .fila-movimiento button{
-    width: 48%;
+    width: 45%;
     margin:  0.3rem 0.3rem;
     padding: 0.3rem 0.5rem;
     border-radius: 0.4rem;
@@ -83,4 +83,10 @@ html, body{
 
 .navbar .derecha button:hover{
     background-color: #3e84a1;
+    transition: all 0.5s;
+}
+
+.fila-movimiento {
+    display: flex;
+    justify-content: center;
 }
